--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Crypto Exchange - Песочница криптобиржи" />
+    <meta name="description" content="Crypto Exchange - Cryptocurrency Exchange Sandbox" />
     <title>Crypto Exchange</title>
   </head>
   <body>
